# chachaAgent

./: .gitignore  CHACHA.md.template  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  chachaagent-3.1.8-py3-none-any.whl  config.toml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
capabilities/: atomic_writer.py  base.py  mcp_client.py  openclaw_loader.py  plugin_installer.py  registry.py  result.py  sandbox.py
capabilities/builtins/: approval_control.py  bash_tool.py  cache_read_tool.py  cache_reader.py  chunk_streamer.py  clock_tool.py  code_intel.py  code_patcher.py  depe_analyzer.py  diff_patcher.py  edit_tool.py  expand_subagent.py  file_outline.py  git_context.py  git_tools.py  glob_tool.py  grep_tool.py  http_tool.py  lang_patterns.py  list_files.py  memory_tool.py  project_overview.py  read_tool.py  stream_reader.py  subagent_tool.py  task_tool.py  write_tool.py
capabilities/mcp/: __init__.py  adapter.py
capabilities/multimodal/: __init__.py
capabilities/rag/: symbol_parser.py  vector_store.py
core/: CHACHA.md.template  chat_engine.py  checkpoint_manager.py  cli_history.py  cli_theme.py  config_manager.py  context_manager.py  dispatcher.py  environment_validator.py  git_context.py  hook_orchestrator.py  llm_invoker.py  orchestrator.py  output_governor.py  policy_engine.py  project_init.py  rule_engine.py  session_service.py  telemetry.py  tool_executor.py
core/context/: context_compressor.py  dream.py  global_dream.py  memory_manager.py  static_rule_loader.py  (+2 more)
docs/: architecture.md  audit.md  builtin_tools.md  checkpoint_manager.md  cli.md  config.md  configuration.md  context.md  context_manager.md  development.md  dispatcher.md  factory.md  gateway.md  hook.md  hook_orchestrator.md  llm_invoker.md  memory.md  model.md  openai_client.md  orchestrator.md  output_governor.md  policy_engine.md  retry_handler.md  router.md  rpc_schema.md  rule_engine.md  sandbox.md  session.md  static_rule_loader.md  subagent.md  telemetry.md  tool-production-audit.md  tool_executor.md  tool_result.md  web.md
protocol/: gateway.py  rpc_schema.py
scripts/: init_project.py
tests/: _quick_test.py
(+113 files in other folders)
