[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chachaAgent"
version = "3.1.5"
description = "通用 AI Agent 框架 — 微内核架构，支持多模型、多工具、多前端"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Reyn", email = "reyn@example.com"},
]
requires-python = ">=3.10"
keywords = ["ai-agent", "llm", "cli", "mcp", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "tomli>=2.0",
    "anthropic>=0.18",
    "ollama>=0.1",
    "lancedb>=0.3",
    "tree-sitter>=0.20",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "tiktoken>=0.5",
    "textual>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "watchdog>=4.0.0",
]
build = [
    "pyinstaller>=5.0",
]

[project.scripts]
chacha = "interface.cli.app:main"

[project.urls]
Homepage = "https://github.com/VerifyL/chachaAgent"
Documentation = "https://github.com/VerifyL/chachaAgent/tree/main/docs"
Repository = "https://github.com/VerifyL/chachaAgent"
Issues = "https://github.com/VerifyL/chachaAgent/issues"

[tool.setuptools.packages.find]
include = ["core*", "protocol*", "capabilities*", "interface*", "scripts*"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.md", "*.jsonl", "*.template"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
markers = [
    "slow: 耗时测试，默认跳过，CI 中夜间运行",
]
